--- a/src/components/covid.css
+++ b/src/components/covid.css
@@ -5,6 +5,7 @@
 section{
 height: 100vh;
 width: 100vw;
+
 background-image:url("covid19-1600x900.jpg")
 }
 section h1{
@@ -124,6 +125,7 @@ section .card__back{
     section{
         height: 100vh;
         width: 100vw;
+        overflow-y:hidden;
     }
 
     section h1{
